fix Synapse logo to use Lato with letter spacing

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -2560,3 +2560,6 @@ div.colborder {
 .lato {
 	font-family: Lato;
 }
+.letter-spacing-6 {
+	letter-spacing: 6px;
+}
